discussion/kv_engine/180238/180238_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53597: wip

Change-Id: I56a00a1e92c32bc9aa39c44e1e090d98b8f8aeb9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-09-21 07:39:17.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-21 07:40:43.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20516/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:572:9: error: use of undeclared identifier "LOG_CRITICAL" [clang-diagnostic-error]
        LOG_CRITICAL("looking at bucket {}", bucket.name);
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:587:13: error: use of undeclared identifier "NoBucketTaskable" [clang-diagnostic-error]
            NoBucketTaskable::instance(), &cookie, appendStatsFn);
            ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20516/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:572:9:
error: use of undeclared identifier "LOG_CRITICAL" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20516/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19739/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
